changed the speakers format

--- a/content/2013-07.html
+++ b/content/2013-07.html
@@ -8,15 +8,19 @@ agenda:
   -
     time: "5:45"
     title: "Realtime Analytics using R"
-    speaker: "Bharani Subramanian"
-    profile: "mailto:bharanis@thoughtworks.com"
-    image: "bharani.jpg"
+    speakers:
+      -
+        name: "Bharani Subramanian"
+        profile: "mailto:bharanis@thoughtworks.com"
+        image: "bharani.jpg"
   -
     time: "6:15"
     title: "Visualizing tournament scores using D3JS and underscore"
-    speaker: "Subhas Dandapani (RDX)"
-    profile: "//facebook.com/rdx.subhas"
-    image: "rdx.jpg"
+    speakers:
+      -
+        name: "Subhas Dandapani (RDX)"
+        profile: "//facebook.com/rdx.subhas"
+        image: "rdx.jpg"
     resources:
       -
         title: "Demo"
@@ -24,9 +28,11 @@ agenda:
   -
     time: "6:45"
     title: "IntelliSense for your Intimidating Data"
-    speaker: "Tamilvendan Sembiyan"
-    profile: "//twitter.com/tamizhvendan"
-    image: "tamizhvendan.jpg"
+    speakers:
+      -
+        name: "Tamilvendan Sembiyan"
+        profile: "//twitter.com/tamizhvendan"
+        image: "tamizhvendan.jpg"
     resources:
       -
         title: "Slides"
@@ -40,9 +46,11 @@ agenda:
   -
     time: "7:30"
     title: "Building a Durable object"
-    speaker: "Sivasubramanian V"
-    profile: "mailto:vsiva@thoughtworks.com"
-    image: "vsiva.jpg"
+    speakers:
+      -
+        name: "Sivasubramanian V"
+        profile: "mailto:vsiva@thoughtworks.com"
+        image: "vsiva.jpg"
     resources:
       -
         title: "Slides"
@@ -50,8 +58,10 @@ agenda:
   -
     time: "8:00"
     title: "Fast Graphics using C"
-    speaker: "Ashok Gowtham"
-    profile: "mailto:ashokgowtham123@gmail.com"
+    speakers:
+      -
+        name: "Ashok Gowtham"
+        profile: "mailto:ashokgowtham123@gmail.com"
     resources:
       -
         title: "GLSL Sandbox"
@@ -59,9 +69,11 @@ agenda:
   -
     time: "8:30"
     title: "Search engine implementation - beyond simple text match"
-    speaker: "Srikanth Venugopalan"
-    profile: "mailto:srikanth.ddit@gmail.com"
-    image: "sriv.jpg"
+    speakers:
+      -
+        name: "Srikanth Venugopalan"
+        profile: "mailto:srikanth.ddit@gmail.com"
+        image: "sriv.jpg"
     resources:
       -
         title: "Slides"
