--- a/content/2013-08.html
+++ b/content/2013-08.html
@@ -8,30 +8,40 @@ agenda:
   -
     time: "5:45"
     title: "NoSQL 101 - Use right database for a problem"
-    speaker: "Yekkanti Kishore Kumar"
-    profile: "//yekkans.com/"
-    image: "yekkanti.jpg"
+    speakers:
+      -
+        name: "Yekkanti Kishore Kumar"
+        profile: "//yekkans.com/"
+        image: "yekkanti.jpg"
   -
     time: "6:15"
     title: "Natural Language Processing - Python"
-    speaker: "Prabu Palanisamy"
+    speakers:
+      -
+        name: "Prabu Palanisamy"
   -
     time: "6:45"
     title: Break
   -
     time: "7:00"
     title: "3-D Printing"
-    speaker: "Surendranath Reddy"
+    speakers:
+      -
+        name: "Surendranath Reddy"
   -
     time: "7:30"
     title: "What can be done using 1 line of .Net code; Automation Tips and tricks"
-    speaker: "Ashok"
+    speakers:
+      -
+        name: "Ashok"
   -
     time: "8:00"
     title: "Neural Networks 101"
-    speaker: "Varadharajan"
-    profile: "mailto:varadham@thoughtworks.com"
-    image: "varadha.jpg"
+    speakers:
+      -
+        name: "Varadharajan"
+        profile: "mailto:varadham@thoughtworks.com"
+        image: "varadha.jpg"
   -
     time: "9:00"
     title: "Networking &amp; Dinner"
