--- a/content/2013-11.html
+++ b/content/2013-11.html
@@ -10,13 +10,17 @@ agenda:
   -
     time: "6:00"
     title: "Client Side Templates"
-    speaker: "Sudhakar R"
-    profile: "//twitter.com/sudhakarr"   
+    speakers:
+      -
+        name: "Sudhakar R"
+        profile: "//twitter.com/sudhakarr"
   -
     time: "6:45"
     title: "A credit card sized linux machine - Raspberrypi"
-    speaker: "Narendran R"
     subtitle: "A brief intro to Raspi , its capabilities and projects done with it.. with a small demo"
+    speakers:
+      -
+        name: "Narendran R"
   -
     time: "7:30"
     title: Break
@@ -24,8 +28,10 @@ agenda:
     time: "7:45"
     title: "Building a distributed crawling engine using Scala and Akka"
     subtitle: "At Indix, we crawl millions of products from hundreds of e-commerce web sites to provide product and pricing intelligence to product managers. The talk will mainly focus on how we addressed most of the challenges faced in building such a system using the Akka framework"
-    speaker: "Rajesh Muppalla"
-    profile: "http://www.linkedin.com/in/mrajesh123"
+    speakers:
+      -
+        name: "Rajesh Muppalla"
+        profile: "http://www.linkedin.com/in/mrajesh123"
   -
     time: "8:30"
     title: "Ad-hoc"
