--- a/content/2013-12.html
+++ b/content/2013-12.html
@@ -10,18 +10,24 @@ agenda:
   -
     time: "6:00"
     title: "Raymarching Distance Fields - Using Pixel Shaders"
-    speaker: "Ashok Gowtham"
+    speakers:
+      -
+        name: "Ashok Gowtham"
   -
     time: "6:45"
     title: "Engineering eCommerce systems for scale"
-    speaker: "Vivek Venugopalan"
+    speakers:
+      -
+        name: "Vivek Venugopalan"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
     title: "Data Crunchin Using R"
-    speaker: "Saravanan P S &amp; Agalya Loganathan"
+    speakers:
+      -
+        name: "Saravanan P S &amp; Agalya Loganathan"
   -
     time: "8:30"
     title: "Ad-hoc"
