--- a/content/2014-02.html
+++ b/content/2014-02.html
@@ -10,18 +10,24 @@ agenda:
   -
     time: "6:00"
     title: "Native vs Hybrid Mobile Apps"
-    subtitle: "Senthil Kumar (Indix)"
+    speakers:
+      -
+        name: "Senthil Kumar (Indix)"
   -
     time: "6:45"
     title: "Micro Services Architecture"
-    subtitle: "Thiyagu Palanisamy (ThoughtWorks)"
+    speakers:
+      -
+        name: "Thiyagu Palanisamy (ThoughtWorks)"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
     title: "Why we yield to javascript ?"
-    subtitle: "Bharani Subramaniam (ThoughtWorks)"
+    speakers:
+      -
+        name: "Bharani Subramaniam (ThoughtWorks)"
   -
     time: "8:30"
     title: "Ex Tempore"
