--- a/content/2014-03.html
+++ b/content/2014-03.html
@@ -10,9 +10,11 @@ agenda:
   -
     time: "6:00"
     title: "Flexible Grids using SASS"
-    speaker: "Vinay Raghu (Enqos)"
-    profile: "https://plus.google.com/u/1/110433311887526268035/about"
-    image: "vinay-raghu.jpg"
+    speakers:
+      -
+        name: "Vinay Raghu (Enqos)"
+        profile: "https://plus.google.com/u/1/110433311887526268035/about"
+        image: "vinay-raghu.jpg"
     resources:
       -
         title: "Slides and Demo Links"
@@ -20,18 +22,22 @@ agenda:
   -
     time: "6:45"
     title: "Hidden Depths of Google Apps Scripting"
-    speaker: "Patrick Martinent (NewGen)"
-    profile: "https://plus.google.com/u/1/+PatrickMartinent0"
-    image: "patrick-martinent.png"
+    speakers:
+      -
+        name: "Patrick Martinent (NewGen)"
+        profile: "https://plus.google.com/u/1/+PatrickMartinent0"
+        image: "patrick-martinent.png"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
     title: "Realtime Push Notifications in the Cloud"
-    speaker: "Pramod Nanduri (TweakMix)"
-    profile: "https://plus.google.com/u/1/+pramodnanduri/about"
-    image: "pramod-nanduri.jpg"
+    speakers:
+      -
+        name: "Pramod Nanduri (TweakMix)"
+        profile: "https://plus.google.com/u/1/+pramodnanduri/about"
+        image: "pramod-nanduri.jpg"
   -
     time: "8:30"
     title: "Ex Tempore"
