--- a/content/2014-04.html
+++ b/content/2014-04.html
@@ -8,14 +8,18 @@ agenda:
   -
     time: "6:00"
     title: "Docker: Introduction and Workshop"
-    speaker: "Boojapathy (ThoughtWorks)"
+    speakers:
+      -
+        name: "Boojapathy (ThoughtWorks)"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
     title: "Introduction to Ansible"
-    subtitle: "Arvind Ram (ThoughtWorks)"
+    speakers:
+      -
+        name: "Arvind Ram (ThoughtWorks)"
   -
     time: "8:30"
     title: "Ex Tempore"
