--- a/content/2014-05.html
+++ b/content/2014-05.html
@@ -9,7 +9,11 @@ agenda:
     time: "5:45"
     title: "Introduction to Go"
     subtitle: "Go is an open source continuous delivery tool"
-    speaker: "Md Ali Ejaz, Srinivas Upadhya (ThoughtWorks)"
+    speakers:
+      -
+        name: "Md Ali Ejaz (ThoughtWorks)"
+      -
+        name: "Srinivas Upadhya (ThoughtWorks)"
     resources:
       -
         title: "Go CD"
@@ -21,7 +25,11 @@ agenda:
     time: "7:00"
     title: "Go CD Workshop"
     subtitle: "There will be two parallel workshops, one for Using Go, and one for Developing/Extending Go, participants are free to choose which one they want to attend"
-    speaker: "Md Ali Ejaz, Srinivas Upadhya (ThoughtWorks)"
+    speakers:
+      -
+        name: "Md Ali Ejaz (ThoughtWorks)"
+      -
+        name: "Srinivas Upadhya (ThoughtWorks)"
     resources:
       -
         title: "Go CD"
