--- a/content/2014-06.html
+++ b/content/2014-06.html
@@ -12,18 +12,26 @@ agenda:
   -
     time: "6:00"
     title: "Mobile Payments using Android"
-    subtitle: "Ramanathan (CTO, juspay.in)"
+    speakers:
+      -
+        name: "Ramanathan (CTO, juspay.in)"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
     title: "Software Design in the 21st Century"
-    subtitle: "Martin Fowler (Chief Scientist, ThoughtWorks)"
+    speakers:
+      -
+        name: "Martin Fowler (Chief Scientist, ThoughtWorks)"
   -
     time: "7:45"
     title: "Why should scala be your next programming language?"
-    subtitle: "Senthil V S & Aravindh S"
+    speakers:
+      -
+        name: "Senthil V S"
+      -
+        name: "Aravindh S"
   -
     time: "8:30"
     title: "Networking &amp; Dinner"
