--- a/content/2014-07.html
+++ b/content/2014-07.html
@@ -9,7 +9,9 @@ agenda:
     time: "6:00"
     title: Dancing With R
     subtitle: Come find out the good parts and the not so good parts which R brings to the table when it comes to number crunching
-    speaker: Simon Roy (ThoughtWorks)
+    speakers:
+      -
+        name: Simon Roy (ThoughtWorks)
   -
     time: "6:45"
     title: "Break"
@@ -17,12 +19,16 @@ agenda:
     time: "7:00"
     title: on{X} - Android Automation
     subtitle: "on{X} lets you control and extend the capabilities of your Android phone using a JavaScript API to remotely program it"
-    speaker: Abinash Bishoyi (TCS)
+    speakers:
+      -
+        name: Abinash Bishoyi (TCS)
   -
     time: "7:45"
     title: Ionic Framework
     subtitle: Build responsive mobile apps using html, css & javascript with Ionic framework
-    speaker: Boojapathy (ThoughtWorks)
+    speakers:
+      -
+        name: Boojapathy (ThoughtWorks)
     
   -
     time: "8:30"
