--- a/content/2015-02.html
+++ b/content/2015-02.html
@@ -12,14 +12,20 @@ agenda:
     time: "6:00"
     title: Embrace Functional Programming
     subtitle: How to overcome the pitfalls of OO using functional programming
-    speaker: "Ashok Ramadoss & Magesh Kumar"
-    profile: https://www.linkedin.com/in/rashokk
+    speakers:
+      -
+        name: "Ashok Ramadoss"
+        profile: https://www.linkedin.com/in/rashokk
+      -
+        name: "Magesh Kumar"
   -
     time: "6:45"
     title: Captain Jack Sparrow's Google Car
     subtitle: Evolution of Navigation
-    speaker: Raveen Beemsingh
-    profile: https://www.linkedin.com/in/raveenbeemsingh
+    speakers:
+      -
+        name: Raveen Beemsingh
+        profile: https://www.linkedin.com/in/raveenbeemsingh
   -
     time: "7:00"
     title: "Break"
@@ -27,8 +33,14 @@ agenda:
     time: "7:15"
     title: Go Matha
     subtitle: Introduction to 'Go' language
-    speaker: "Kavitha Rajagopalan, Arvind Ram Anantharam & Ramanathan Santhanam"
-    profile: https://www.linkedin.com/in/ramschennai
+    speakers:
+      -
+        name: "Kavitha Rajagopalan"
+      -
+        name: "Arvind Ram Anantharam"
+      -
+        name: "Ramanathan Santhanam"
+        profile: https://www.linkedin.com/in/ramschennai
   -
     time: "8:15"
     title: "Networking & Dinner"
