--- a/content/2015-03.html
+++ b/content/2015-03.html
@@ -11,8 +11,10 @@ agenda:
   -
     time: "6:00"
     title: Scripting Nginx with lua - OpenResty
-    speaker: "Bharani Subramaniam"
-    profile: https://www.linkedin.com/in/bharanisubramaniam
+    speakers:
+      -
+        name: "Bharani Subramaniam"
+        profile: https://www.linkedin.com/in/bharanisubramaniam
   -
     time: "7:00"
     title: "Break"
@@ -22,9 +24,11 @@ agenda:
     subtitle: "<p>Fast becoming a hot topic in the world of Reactive JVM applications is CQRS/ES (Command Query Responsibility Segregation and Event sourcing). These design patterns, while not new, present a fresh way to reason about application design that is a natural fit for distributed computing.</p>
 
     <p>This video talk will explain the rationale behind CQRS/ES, how it fits the Reactive paradigm and the advantages at both the technology and business level. We will also discuss the implications of consistency models and how this approach affects Domain Driven Design.</p>"
-    speaker: Duncan DeVore
-    speaker_profile: "Duncan DeVore works @ Typesafe, is co-author of Reactive Application Development, Manning Publications and is passionate about reactive application (distributed systems) design using tools such as Scala and Akka."
-    profile: "https://www.linkedin.com/pub/duncan-devore/b/b28/745"
+    speakers:
+      -
+        name: Duncan DeVore
+        description: "Duncan DeVore works @ Typesafe, is co-author of Reactive Application Development, Manning Publications and is passionate about reactive application (distributed systems) design using tools such as Scala and Akka."
+        profile: "https://www.linkedin.com/pub/duncan-devore/b/b28/745"
   -
     time: "8:15"
     title: "Networking & Dinner"
