--- a/content/2015-05.html
+++ b/content/2015-05.html
@@ -11,20 +11,31 @@ agenda:
   -
     time: "6:00"
     title: "The UNIX Way vs. the Java Enterprise Edition Way"
-    speaker: "Matteo Vaccari"
-    profile: https://it.linkedin.com/in/matteovaccari
+    speakers:
+      -
+        name: "Matteo Vaccari"
+        profile: https://it.linkedin.com/in/matteovaccari
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
     title: Building A Cloud Management Platform Using Megam.io
-    speaker: "Yeshwanth Kumar"
-    profile: https://in.linkedin.com/in/yeshwanthk
+    speakers:
+      -
+        name: "Yeshwanth Kumar"
+        profile: https://in.linkedin.com/in/yeshwanthk
   -
     time: "7:30"
     title: Why Haskell?
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/tanmaig'>Tanmai</a>, Brandon & Vamshi"
+    speakers:
+      -
+        name: "Tanmai"
+        profile: "https://in.linkedin.com/in/tanmaig"
+      -
+        name: "Brandon"
+      -
+        name: "Vamshi"
   -
     time: "8:15"
     title: "Networking & Dinner"
