--- a/content/2015-06.html
+++ b/content/2015-06.html
@@ -9,8 +9,10 @@ agenda:
     time: "6:00"
     title: "Scalable RDBMS via CDI and MyBatis"
     video_link: "https://www.youtube.com/watch?v=btDh8ctdfSs"
-    speaker: "Giridhar Kannan"
-    profile: https://github.com/giridharkannan
+    speakers:
+      -
+        name: "Giridhar Kannan"
+        profile: https://github.com/giridharkannan
   -
     time: "6:45"
     title: "Break"
@@ -18,14 +20,18 @@ agenda:
     time: "7:00"
     title: "Effective use of JDBI"
     video_link: "https://www.youtube.com/watch?v=9dGLWKBaagI"
-    speaker: "Manikandan Kumar"
-    profile: https://www.linkedin.com/in/kmanikandan26
+    speakers:
+      -
+        name: "Manikandan Kumar"
+        profile: https://www.linkedin.com/in/kmanikandan26
   -
     time: "7:30"
     title: "iDepth: Life of a query in Postgres"
     video_link: "https://www.youtube.com/watch?v=cM9Nvk32kq0"
-    speaker: Varadharajan Mukundan
-    profile: https://www.linkedin.com/pub/varadharajan-mukundan/17/b54/621
+    speakers:
+      -
+        name: Varadharajan Mukundan
+        profile: https://www.linkedin.com/pub/varadharajan-mukundan/17/b54/621
   -
     time: "8:15"
     title: "Networking & Dinner"
