--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -8,17 +8,25 @@ agenda:
   -
     time: "6:00"
     title: "ECMAScript 6 & Using it today"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/selvakn'>Selvakumar Natesan</a>, <a href='https://www.linkedin.com/pub/aruna-shanmuga-kumar/47/188/6a6'>Aruna Shanmuga Kumar</a>"
-    image: "selvakn.jpeg"
+    speakers:
+      -
+        name: "Selvakumar Natesan"
+        profile: "https://in.linkedin.com/in/selvakn"
+        image: "selvakn.jpeg"
+      -
+        name: "Aruna Shanmuga Kumar"
+        profile: "https://www.linkedin.com/pub/aruna-shanmuga-kumar/47/188/6a6"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
     title: "Introduction to reactive streams"
-    speaker: "Mushtaq Ahmed"
-    profile: https://www.linkedin.com/pub/mushtaq-ahmed/0/76b/a0b
-    image: "musthaq.jpg"
+    speakers:
+      -
+        name: "Mushtaq Ahmed"
+        profile: https://www.linkedin.com/pub/mushtaq-ahmed/0/76b/a0b
+        image: "musthaq.jpg"
   -
     time: "8:15"
     title: "Networking & Dinner"
