--- a/content/2015-09.html
+++ b/content/2015-09.html
@@ -9,7 +9,10 @@ agenda:
     time: "6:00"
     title: "Stayzilla : moving from a monolithic stack towards a microservice based architecture"
     video_link: "https://www.youtube.com/watch?v=6vJyp0MeVXA"
-    speaker_profile: "By: <a href='https://www.linkedin.com/in/arvsr1988'>Arvind Sridharan</a>"
+    speakers:
+      -
+        name: "Arvind Sridharan"
+        profile: "https://www.linkedin.com/in/arvsr1988"
 
   -
     time: "6:45"
@@ -18,12 +21,18 @@ agenda:
     time: "7:00"
     title: "So you think you know Java"
     video_link: "https://www.youtube.com/watch?v=FXQBS6rH32s"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
+    speakers:
+      -
+        name: "Bharani Subramaniam"
+        profile: "https://in.linkedin.com/in/bharanisubramaniam"
   -
     time: "7:30"
     title: "React Apps with a Brain"
     video_link: "https://www.youtube.com/watch?v=c-1miN1WZgo"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/gauravagarwalr'>Gaurav Agarwal</a>"
+    speakers:
+      -
+        name: "Gaurav Agarwal"
+        profile: "https://in.linkedin.com/in/gauravagarwalr"
   -
     time: "8:15"
     title: "Networking & Dinner"
