--- a/content/2015-10.html
+++ b/content/2015-10.html
@@ -9,7 +9,10 @@ agenda:
     time: "6:00"
     title: "Building a global open Internet of Things data network"
     video_link: "https://www.youtube.com/watch?v=7gogs96PA_k"
-    speaker_profile: "By: <a href='https://nl.linkedin.com/in/wienke'>Wienke Giezeman</a>"
+    speakers:
+      -
+        name: "Wienke Giezeman"
+        profile: "https://nl.linkedin.com/in/wienke"
   -
     time: "6:45"
     title: "Break"
@@ -17,12 +20,18 @@ agenda:
     time: "7:00"
     title: "Common blindspots on the Journey to Production beyond Continuous Delivery"
     video_link: "https://www.youtube.com/watch?v=gZxkx85vt18"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>"
+    speakers:
+      -
+        name: "Vijay Raghavan Aravamudhan"
+        profile: "https://in.linkedin.com/in/avijayr"
   -
     time: "7:45"
     title: "Building low latency application"
     video_link: "https://www.youtube.com/watch?v=5UHGpIIXM_U"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
+    speakers:
+      -
+        name: "Bharani Subramaniam"
+        profile: "https://in.linkedin.com/in/bharanisubramaniam"
   -
     time: "8:15"
     title: "Networking & Dinner"
