--- a/content/2015-11.html
+++ b/content/2015-11.html
@@ -9,12 +9,17 @@ agenda:
     time: "6:00"
     title: "How to start hacking electronics"
     video_link: "https://www.youtube.com/watch?v=CjX7jHCKDfY"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/deepans'>Deepan Subramani</a>"
+    speakers:
+      -
+        name: "Deepan Subramani"
+        profile: "https://in.linkedin.com/in/deepans"
   -
     time: "6:45"
     title: "Let's <span style='text-decoration: line-through;'>talk</span> fly drones.."
     video_link: "https://www.youtube.com/watch?v=sXEa8F8fKC4"
-    speaker_profile: "By: Srini Vas"
+    speakers:
+      -
+        name: "Srini Vas"
   -
     time: "7:30"
     title: "Break"
@@ -22,5 +27,8 @@ agenda:
     time: "7:45"
     title: "IoTT - Keep an eye on TT table from your desk"
     video_link: "https://www.youtube.com/watch?v=YD-kDwEm9Tc"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>"
+    speakers:
+      -
+        name: "Arun Kumar Sundaramurthy"
+        profile: "https://in.linkedin.com/in/arunkumarsundaramurthy"
 ---
