--- a/content/2015-12.html
+++ b/content/2015-12.html
@@ -9,7 +9,9 @@ agenda:
     time: "6:00"
     title: "The Tweeting Tree"
     video_link: "https://www.youtube.com/watch?v=SNAe4zcmWho"
-    speaker_profile: "By: Nipun Kanade"
+    speakers:
+      -
+        name: "Nipun Kanade"
     resources:
       -
         title: "Slide"
@@ -18,7 +20,10 @@ agenda:
     time: "6:45"
     title: "IoTT - Keep an eye on TT table from your desk"
     video_link: "https://www.youtube.com/watch?v=YD-kDwEm9Tc"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>"
+    speakers:
+      -
+        name: "Arun Kumar Sundaramurthy"
+        profile: "https://in.linkedin.com/in/arunkumarsundaramurthy"
     resources:
       -
         title: "Slide"
@@ -36,5 +41,8 @@ agenda:
     time: "7:30"
     title: "Kulir 100 Degree : Automating water heater"
     video_link: "https://www.youtube.com/watch?v=34DI8xvSp2Y"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/krishnaswamy-subramanian-20359118'>Krishnaswamy Subramanian</a>"
+    speakers:
+      -
+        name: "Krishnaswamy Subramanian"
+        profile: "https://in.linkedin.com/in/krishnaswamy-subramanian-20359118"
 ---
