--- a/content/2016-01.html
+++ b/content/2016-01.html
@@ -9,7 +9,10 @@ agenda:
     time: "6:00"
     title: "Introduction to Elixir"
     video_link: "https://www.youtube.com/watch?v=aPPaQF1aVw4"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>"
+    speakers:
+      -
+        name: "Vijay Raghavan Aravamudhan"
+        profile: "https://in.linkedin.com/in/avijayr"
   -
     time: "6:45"
     title: "Break"
@@ -17,7 +20,9 @@ agenda:
     time: "7:00"
     title: "Introduction to Haskell & it's roadblocks in learning"
     video_link: "https://www.youtube.com/watch?v=RIKI4BQ3rQ4"
-    speaker_profile: "By: Sreenidhi Nair"
+    speakers:
+      -
+        name: "Sreenidhi Nair"
   -
     time: "8:15"
     title: "Networking & Dinner"
