--- a/content/2016-02.html
+++ b/content/2016-02.html
@@ -9,7 +9,10 @@ agenda:
     time: "6:00"
     title: "Building Pied Piper, for real"
     video_link: "https://www.youtube.com/watch?v=c1U5WniCEuA"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/swaathi-kakarla-65b304a3'>Swaathi Kakarla</a>"
+    speakers:
+      -
+        name: "Swaathi Kakarla"
+        profile: "https://in.linkedin.com/in/swaathi-kakarla-65b304a3"
   -
     time: "6:45"
     title: "Break"
@@ -17,7 +20,10 @@ agenda:
     time: "7:00"
     title: "Let us not REST"
     video_link: "https://www.youtube.com/watch?v=x6xisPV0OOY"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
+    speakers:
+      -
+        name: "Bharani Subramaniam"
+        profile: "https://in.linkedin.com/in/bharanisubramaniam"
   -
     time: "8:00"
     title: "Networking & Dinner"
