--- a/content/2016-03.html
+++ b/content/2016-03.html
@@ -9,12 +9,18 @@ agenda:
     time: "6:00"
     title: "Real Time Streaming with Kafka and Samza"
     video_link: "https://www.youtube.com/watch?v=NNpqCFdy3iw"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/ganeshpraburavi'>Ganesh Prabu Ravi</a>"
+    speakers:
+      -
+        name: "Ganesh Prabu Ravi"
+        profile: "https://in.linkedin.com/in/ganeshpraburavi"
   -
     time: "6:30"
     title: "Serverless Architecture"
     video_link: "https://www.youtube.com/watch?v=EFgr5R7bfGg"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/selvakn'>Selvakumar Natesan</a>"
+    speakers:
+      -
+        name: "Selvakumar Natesan"
+        profile: "https://in.linkedin.com/in/selvakn"
     image: "selvakn.jpeg"
   -
     time: "7:15"
@@ -23,7 +29,13 @@ agenda:
     time: "7:30"
     title: "Pattern Matching and Recursion in Elixir"
     video_link: "https://www.youtube.com/watch?v=jfWCyI-b17U"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/dinesh-balasubramaniam-9663a298'>Dinesh Balasubramaniam</a>, <a href='https://in.linkedin.com/in/arunvelsriram'>Arunvel Sriram</a>"
+    speakers:
+      -
+        name: "Dinesh Balasubramaniam"
+        profile: "https://in.linkedin.com/in/dinesh-balasubramaniam-9663a298"
+      -
+        name: "Arunvel Sriram"
+        profile: "https://in.linkedin.com/in/arunvelsriram"
   -
     time: "8:15"
     title: "Networking & Dinner"
