--- a/content/2016-04.html
+++ b/content/2016-04.html
@@ -9,12 +9,18 @@ agenda:
     time: "6:00"
     title: "Running Infrastructure on Spot instances in AWS"
     video_link: "https://www.youtube.com/watch?v=qeBV9JRoTOA"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/ashwanthkumar'>Ashwanth Kumar</a>"
+    speakers:
+      -
+        name: "Ashwanth Kumar"
+        profile: "https://in.linkedin.com/in/ashwanthkumar"
   -
     time: "6:45"
     title: "Express automation test using Espresso"
     video_link: "https://www.youtube.com/watch?v=uiv3WAr-QQE"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/arvind-srinivasan-bb32812b'>Arvind Srinivasan</a>"
+    speakers:
+      -
+        name: "Arvind Srinivasan"
+        profile: "https://in.linkedin.com/in/arvind-srinivasan-bb32812b"
   -
     time: "7:15"
     title: "Break"
@@ -22,7 +28,10 @@ agenda:
     time: "7:30"
     title: "Making your life easier with just types and functions"
     video_link: "https://www.youtube.com/watch?v=ZPEXttfVulM"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/chandan-singh-609ab1b7'>Chandan Singh</a>"
+    speakers:
+      -
+        name: "Chandan Singh"
+        profile: "https://in.linkedin.com/in/chandan-singh-609ab1b7"
   -
     time: "8:15"
     title: "Networking & Dinner"
