--- a/content/2016-05.html
+++ b/content/2016-05.html
@@ -9,7 +9,10 @@ agenda:
     time: "6:00"
     title: "Flying up with Python"
     video_link: "https://www.youtube.com/watch?v=UFFDa601QjI"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/dinesh-kumar-9a459570'>Dinesh Kumar</a>"
+    speakers:
+      -
+        name: "Dinesh Kumar"
+        profile: "https://in.linkedin.com/in/dinesh-kumar-9a459570"
     resources:
       -
         title: "Github"
@@ -21,7 +24,10 @@ agenda:
     time: "7:15"
     title: "An introduction to deep learning with TensorFlow"
     video_link: "https://www.youtube.com/watch?v=8kaCNtKn73g"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/manishshivanandhan'>Manish M. Shivanandhan</a>"
+    speakers:
+      -
+        name: "Manish M. Shivanandhan"
+        profile: "https://in.linkedin.com/in/manishshivanandhan"
   -
     time: "8:00"
     title: "Networking & Dinner"
