--- a/content/2016-06.html
+++ b/content/2016-06.html
@@ -9,7 +9,9 @@ agenda:
     time: "6:00"
     title: "Handling Data and Relational Explosion in Database"
     video_link: "https://www.youtube.com/watch?v=pKGEQOtSxjQ"
-    speaker_profile: "By: Ramalingam. S"
+    speakers:
+      -
+        name: "Ramalingam. S"
   -
     time: "6:45"
     title: "Break"
@@ -17,7 +19,10 @@ agenda:
     time: "7:00"
     title: "Getting started with React(ES6 way)"
     video_link: "https://www.youtube.com/watch?v=kfFAUNp2DRI"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/rajzshkr'>Raja Sekar</a>"
+    speakers:
+      -
+        name: "Raja Sekar"
+        profile: "https://in.linkedin.com/in/rajzshkr"
     resources:
       -
         title: "Slides"
@@ -29,7 +34,10 @@ agenda:
     time: "7:30"
     title: "Yet another Machine Learning Talk"
     video_link: "https://www.youtube.com/watch?v=afpmqZJLOv4"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/raghavan-a-k-3a102713'>Raghavan A K</a>"
+    speakers:
+      -
+        name: "Raghavan A K"
+        profile: "https://in.linkedin.com/in/raghavan-a-k-3a102713"
   -
     time: "8:00"
     title: "Networking & Dinner"
