--- a/content/2016-07.html
+++ b/content/2016-07.html
@@ -9,12 +9,22 @@ agenda:
     time: "6:00"
     title: "Comfox - The next gen information radiator"
     video_link: "https://www.youtube.com/watch?v=HhAwfIkT7gI"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>, Jagdsh LK Chand, Abhinaya"
+    speakers:
+      -
+        name: "Arun Kumar Sundaramurthy"
+        profile: "https://in.linkedin.com/in/arunkumarsundaramurthy"
+      -
+        name: "Jagdsh LK Chand"
+      -
+        name: "Abhinaya"
   -
     time: "6:30"
     title: "How SPI servers held the lines against Kabali's wrath"
     video_link: "https://www.youtube.com/watch?v=MQlD8u6h9hQ"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/boojapathy-chidhambaram-7b7301b'>Boojapathy Chidhambaram</a>"
+    speakers:
+      -
+        name: "Boojapathy Chidhambaram"
+        profile: "https://in.linkedin.com/in/boojapathy-chidhambaram-7b7301b"
   -
     time: "7:30"
     title: "Break"
@@ -22,7 +32,19 @@ agenda:
     time: "7:45"
     title: "Panel Discussion on Tech Radar"
     video_link: "https://www.youtube.com/watch?v=u_OA7tjCFFM"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>, <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>, <a href='https://in.linkedin.com/in/boojapathy-chidhambaram-7b7301b'>Boojapathy Chidhambaram</a>, <a href='https://in.linkedin.com/in/selvakn'>Selvakumar Natesan</a>"
+    speakers:
+      -
+        name: "Bharani Subramaniam"
+        profile: "https://in.linkedin.com/in/bharanisubramaniam"
+      -
+        name: "Vijay Raghavan Aravamudhan"
+        profile: "https://in.linkedin.com/in/avijayr"
+      -
+        name: "Boojapathy Chidhambaram"
+        profile: "https://in.linkedin.com/in/boojapathy-chidhambaram-7b7301b"
+      -
+        name: "Selvakumar Natesan"
+        profile: "https://in.linkedin.com/in/selvakn"
   -
     time: "8:30"
     title: "Networking & Dinner"
