--- a/content/2016-09.html
+++ b/content/2016-09.html
@@ -9,7 +9,10 @@ agenda:
     time: "6:00"
     title: "Semantic Versioning"
     video_link: "https://www.youtube.com/watch?v=uDTHYbtOC-k"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/avekashgupta'>Avekash Gupta</a>"
+    speakers:
+      -
+        name: "Avekash Gupta"
+        profile: "https://in.linkedin.com/in/avekashgupta"
   -
     time: "6:45"
     title: "Break"
@@ -17,12 +20,18 @@ agenda:
     time: "7:00"
     title: "IoT Developer vs Software Developer"
     video_link: "https://www.youtube.com/watch?v=eVWFf-YTktU"
-    speaker_profile: "By: <a href='https://www.linkedin.com/in/amalraju'>Amal Raj</a>"
+    speakers:
+      -
+        name: "Amal Raj"
+        profile: "https://www.linkedin.com/in/amalraju"
   -
     time: "7:45"
     title: "H2Oh - Smart Water Dispenser"
     video_link: "https://www.youtube.com/watch?v=kxJE2K1CeUo"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/kanadenipun'>Nipun Kanade</a>"
+    speakers:
+      -
+        name: "Nipun Kanade"
+        profile: "https://in.linkedin.com/in/kanadenipun"
   -
     time: "8:15"
     title: "Networking & Dinner"
