--- a/content/example.html
+++ b/content/example.html
@@ -16,9 +16,12 @@ agenda:
     title: "<title>"
     video_link: "link to the recorded/live video"
     subtitle: "<short description for the talk, shown below the title>"
-    speaker: "<speaker name>"
-    profile: "<link/url when clicking on the speaker name, e.g. twitter, facebook, website, etc>"
-    image: "<upload the image to assets/img/speaker and give the filename here>"
+    speakers:
+      -
+        name: "<speaker name>"
+        profile: "<link/url when clicking on the speaker name, e.g. twitter, facebook, website, etc>"
+        description: "description of the speaker"
+        image: "<upload the image to assets/img/speaker and give the filename here>"
     resources: # array of resources for the talk
       -
         title: "<name of the resource>"
