--- a/content/2013-09.html
+++ b/content/2013-09.html
@@ -8,34 +8,44 @@ agenda:
   -
     time: "5:45"
     title: "Startup Journey - Innovation and Challenges"
-    speaker: "Michael Chen"
-    profile: "//twitter.com/mechiland"
-    image: "michael-chen.jpg"
+    speakers:
+      -
+        name: "Michael Chen"
+        profile: "//twitter.com/mechiland"
+        image: "michael-chen.jpg"
   -
     time: "6:15"
     title: "5 things you may not know about Postgres"
-    speaker: "Vagmi Mudumbai"
-    profile: "//twitter.com/vagmi"
-    image: "vagmi.jpg"
+    speakers:
+      -
+        name: "Vagmi Mudumbai"
+        profile: "//twitter.com/vagmi"
+        image: "vagmi.jpg"
   -
     time: "6:45"
     title: Break
   -
     time: "7:00"
     title: "Emerging trends in Microcontroller programming"
-    speaker: "Karthik Singaram"
-    profile: "mailto:rkarthiksing@gmail.com"
-    image: "karthik-singaram.jpg"
+    speakers:
+      -
+        name: "Karthik Singaram"
+        profile: "mailto:rkarthiksing@gmail.com"
+        image: "karthik-singaram.jpg"
   -
     time: "7:30"
     title: "Rangoliz HTML5 app for creating Rangoli designs"
-    speaker: "Senthilvelan Jayabal"
-    profile: "mailto:jsenthilvelan@gmail.com"
+    speakers:
+      -
+        name: "Senthilvelan Jayabal"
+        profile: "mailto:jsenthilvelan@gmail.com"
   -
     time: "8:00"
     title: "Building customer intelligence online"
-    speaker: "Vishnu Vankayala"
-    profile: "mailto:vishnuvvn@gmail.com"
+    speakers:
+      -
+        name: "Vishnu Vankayala"
+        profile: "mailto:vishnuvvn@gmail.com"
   -
     time: "9:00"
     title: "Networking &amp; Dinner"
