--- a/content/2013-10.html
+++ b/content/2013-10.html
@@ -9,9 +9,11 @@ agenda:
   -
     time: "6:00"
     title: "N Different Ways to Sync Data"
-    speaker: "Selvakumar Natesan"
-    profile: "//twitter.com/selvakn"
-    image: "selvakn.jpeg"
+    speakers:
+      -
+        name: "Selvakumar Natesan"
+        profile: "//twitter.com/selvakn"
+        image: "selvakn.jpeg"
     resources:
       -
         title: "Presentation"
@@ -19,9 +21,11 @@ agenda:
   -
     time: "6:45"
     title: "Demystifying Apache Drill"
-    speaker: "Varadharajan M"
-    profile: "mailto:varadham@thoughtworks.com"
-    image: "varadha.jpg"
+    speakers:
+      -
+        name: "Varadharajan M"
+        profile: "mailto:varadham@thoughtworks.com"
+        image: "varadha.jpg"
     resources:
       -
         title: "Apache Drill"
@@ -32,16 +36,20 @@ agenda:
   -
     time: "7:45"
     title: "A Primer on MSIL and IL Injection in C#"
-    speaker: "Aravindh S"
-    profile: "mailto:aravindh@thoughtworks.com"
-    image: "aravindhs.jpg"
+    speakers:
+      -
+        name: "Aravindh S"
+        profile: "mailto:aravindh@thoughtworks.com"
+        image: "aravindhs.jpg"
   -
     time: "8:30"
     title: 'Creating Parallax websites using Skrollr'
     subtitle: 'Lightning Talk'
-    speaker: "Subhas Dandapani (RDX)"
-    profile: "//facebook.com/rdx.subhas"
-    image: "rdx.jpg"
+    speakers:
+      -
+        name: "Subhas Dandapani (RDX)"
+        profile: "//facebook.com/rdx.subhas"
+        image: "rdx.jpg"
     resources:
       -
         title: "Android KitKat"
