--- a/content/2014-01.html
+++ b/content/2014-01.html
@@ -11,13 +11,17 @@ agenda:
     time: "6:00"
     title: "Building a Fault Tolerant Architecture"
     subtitle: "for a World Leader in Consumer Electronics"
-    speaker: "Velmurugan Srinivasan"
+    speakers:
+      -
+        name: "Velmurugan Srinivasan"
     profile: "mailto:vsrinivasan@altimetrik.com"
   -
     time: "6:35"
     title: "Testing Challenges in Big Data Applications"
     subtitle: "Experiences and solutions at Indix when collecting billions of data daily"
-    speaker: "Rajesh Mupalla"
+    speakers:
+      -
+        name: "Rajesh Mupalla"
     profile: "mailto:rajesh@indix.com"
   -
     time: "7:10"
@@ -26,14 +30,18 @@ agenda:
     time: "7:20"
     title: "AngularJS"
     subtitle: "A JavaScript framework for developing great single-page web applications"
-    speaker: "Rajkumar Rathi"
+    speakers:
+      -
+        name: "Rajkumar Rathi"
     profile: "mailto:rajsharp@gmail.com"
   -
     time: "7:55"
     title: "ThoughtWorks Tech Radar"
     subtitle: "Exploring the current state of technology"
-    speaker: "Various ThoughtWorkers"
-    profile: "mailto:geeknight.chennai@thoughtworks.com"
+    speakers:
+      -
+        name: "Various ThoughtWorkers"
+        profile: "mailto:geeknight.chennai@thoughtworks.com"
     resources:
       -
         title: "Tech Radar"
