--- a/content/2014-08.html
+++ b/content/2014-08.html
@@ -21,9 +21,11 @@ agenda:
   -
     time: "6:00"
     title: "VueJS Workshop"
-    speaker: "Subhas Dandapani"
-    profile: "https://www.facebook.com/rdx.subhas"
-    image: "rdx.jpg"
+    speakers:
+      -
+        name: "Subhas Dandapani"
+        profile: "https://www.facebook.com/rdx.subhas"
+        image: "rdx.jpg"
     resources:
       - title: "v1 Basic HTML"
         url: "http://codepen.io/rdsubhas/pen/pKdsz"
@@ -39,9 +41,11 @@ agenda:
   -
     time: "7:15"
     title: "VueJS Workshop"
-    speaker: "Subhas Dandapani"
-    profile: "https://www.facebook.com/rdx.subhas"
-    image: "rdx.jpg"
+    speakers:
+      -
+        name: "Subhas Dandapani"
+        profile: "https://www.facebook.com/rdx.subhas"
+        image: "rdx.jpg"
     resources:
       - title: "v5 Filters"
         url: "http://codepen.io/rdsubhas/pen/jogkJ"
