--- a/content/2014-11.html
+++ b/content/2014-11.html
@@ -9,8 +9,10 @@ agenda:
     time: "6:00"
     title: Record, Revise, Revive
     subtitle: How a tool can help to improve yourself continuously
-    speaker: Sudhakar R
-    profile: http://rsudhakar.in
+    speakers:
+      -
+        name: Sudhakar R
+        profile: http://rsudhakar.in
   -
     time: "6:45"
     title: "Break"
@@ -18,14 +20,18 @@ agenda:
     time: "7:00"
     title: Submerge in Sublime
     subtitle:
-    speaker: Ashok Gowtham M
-    profile: https://github.com/ashokgowtham
+    speakers:
+      -
+        name: Ashok Gowtham M
+        profile: https://github.com/ashokgowtham
   -
     time: "7:45"
     title: Introduction to Polymer and Polymer Designer Tool
     subtitle:
-    speaker: Somasundaram M
-    profile: https://github.com/msomu
+    speakers:
+      -
+        name: Somasundaram M
+        profile: https://github.com/msomu
   -
     time: "8:30"
     title: "Networking & Dinner"
