--- a/content/2015-04.html
+++ b/content/2015-04.html
@@ -11,21 +11,27 @@ agenda:
   -
     time: "6:00"
     title: "Web Components: Building Blocks Of The New Web"
-    speaker: "Rajasekharan Sundararaj"
-    profile: http://twitter.com/nodesman
+    speakers:
+      -
+        name: "Rajasekharan Sundararaj"
+        profile: http://twitter.com/nodesman
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
     title: Building Cloud Management Using Megam.io
-    speaker: "Kishorekumar Neelamegam"
-    profile: https://www.linkedin.com/in/kishorekumarneelamegam
+    speakers:
+      -
+        name: "Kishorekumar Neelamegam"
+        profile: https://www.linkedin.com/in/kishorekumarneelamegam
   -
     time: "7:30"
     title: Discussion on Net neutrality
-    speaker: "Free Software Foundation, Tamil Nadu"
-    profile: http://fsftn.org/
+    speakers:
+      -
+        name: "Free Software Foundation, Tamil Nadu"
+        profile: http://fsftn.org/
   -
     time: "8:15"
     title: "Networking & Dinner"
