--- a/content/2016-08.html
+++ b/content/2016-08.html
@@ -9,12 +9,17 @@ agenda:
     time: "6:00"
     title: "Rethinking State Management"
     video_link: "https://www.youtube.com/watch?v=__QVhjRSjcM"
-    speaker_profile: "By: <a href='https://twitter.com/tamizhvendan'>Tamizhvendan S</a>"
+    speakers:
+      -
+        name: "Tamizhvendan S"
+        profile: "https://twitter.com/tamizhvendan"
   -
     time: "7:00"
     title: "Scrummers and Sprinters"
     video_link: "https://www.youtube.com/watch?v=f7lMB3TzLr4"
-    speaker_profile: "By: Ravichandran JV"
+    speakers:
+      -
+        name: "Ravichandran JV"
   -
     time: "8:15"
     title: "Networking & Dinner"
