added youtube link

--- a/content/2016-10.html
+++ b/content/2016-10.html
@@ -3,11 +3,12 @@ start: 2016-11-3 17:45
 edition: 36
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/234997403/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqwL6beTudNjGV3TRYuHWf0e'>YouTube</a>."
 agenda:
   -
     time: "6:00"
     title: "REST - A brief Introduction"
+    video_link: "https://www.youtube.com/watch?v=R56ZDvOL_ek"
     speakers:
       -
         name: "Antony Alappatt"
@@ -17,6 +18,7 @@ agenda:
   -
     time: "7:00"
     title: "A World of Emacs"
+    video_link: "https://www.youtube.com/watch?v=In4C2SN2Pck"
     speakers:
       -
         name: "Shakthi Kannan"
@@ -25,6 +27,7 @@ agenda:
     time: "7:45"
     title: "Free Yourself With Constraints"
     subtitle: "Taking simple functions, we'll observe how progressively adding various constraints enables us to read and reason about our code in a much better fashion."
+    video_link: "https://www.youtube.com/watch?v=LuJsrygWt5w"
     speakers:
       -
         name: "Balaji Sivaraman"
