nov 2016: modified talks

--- a/content/2016-11.html
+++ b/content/2016-11.html
@@ -11,19 +11,28 @@ agenda:
     speakers:
       -
         name: "Ashwanth Kumar"
+        profile: "https://in.linkedin.com/in/ashwanthkumar"
   -
     time: "6:45"
-    title: "Break"
-  -
-    time: "7:00"
-    title: "TBA"
-  -
-    time: "7:30"
-    title: "Backend Growing Pains: Game of Locks"
+    title: "Fastlane"
+    subtitle: "Continuous Delivery in iOS Using Fastlane"
     speakers:
       -
-        name: "Arul Kumaravel"
+        name: "Madhumitha Prabakar"
+        profile: "https://in.linkedin.com/in/madhumitha-prabakar-055b4b76"
+      -
+        name: "Vijay Pratap Singh"
   -
-    time: "8:30"
+    time: "7:15"
+    title: "Break"
+  -
+    time: "7:30"
+    title: "Unit testing goodness"
+    speakers:
+      -
+        name: "Shanu Madassery"
+        profile: "https://in.linkedin.com/in/shanu-madassery-21943664"
+  -
+    time: "8:15"
     title: "Networking & Dinner"
 ---
