added video link for nov 2016

--- a/content/2016-10.html
+++ b/content/2016-10.html
@@ -8,7 +8,7 @@ agenda:
   -
     time: "6:00"
     title: "REST - A brief Introduction"
-    video_link: "https://www.youtube.com/watch?v=R56ZDvOL_ek"
+    video_link: "https://www.youtube.com/watch?v=xUCMytIkhdE"
     speakers:
       -
         name: "Antony Alappatt"
@@ -18,7 +18,7 @@ agenda:
   -
     time: "7:00"
     title: "A World of Emacs"
-    video_link: "https://www.youtube.com/watch?v=In4C2SN2Pck"
+    video_link: "https://www.youtube.com/watch?v=hlVJNVKv6Nw"
     speakers:
       -
         name: "Shakthi Kannan"
@@ -27,7 +27,7 @@ agenda:
     time: "7:45"
     title: "Free Yourself With Constraints"
     subtitle: "Taking simple functions, we'll observe how progressively adding various constraints enables us to read and reason about our code in a much better fashion."
-    video_link: "https://www.youtube.com/watch?v=LuJsrygWt5w"
+    video_link: "https://www.youtube.com/watch?v=f8vfS7Bcd0E"
     speakers:
       -
         name: "Balaji Sivaraman"
