--- a/content/2016-11.html
+++ b/content/2016-11.html
@@ -3,11 +3,12 @@ start: 2016-11-24 17:45
 edition: 37
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/235669987/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqwL6beTudNjGV3TRYuHWf0e'>YouTube</a>."
 agenda:
   -
     time: "6:00"
     title: "On building distributed RocksDB"
+    video_link: "https://www.youtube.com/watch?v=PSCa9_Avne0"
     speakers:
       -
         name: "Ashwanth Kumar"
@@ -16,6 +17,7 @@ agenda:
     time: "6:45"
     title: "Fastlane"
     subtitle: "Continuous Delivery in iOS Using Fastlane"
+    video_link: "https://www.youtube.com/watch?v=y5a8Xiv63jk"
     speakers:
       -
         name: "Madhumitha Prabakar"
@@ -28,6 +30,7 @@ agenda:
   -
     time: "7:30"
     title: "Unit testing goodness"
+    video_link: "https://www.youtube.com/watch?v=ugoIBiIZgQ8"
     speakers:
       -
         name: "Shanu Madassery"
