added youtube link - dec 2016

--- a/content/2016-12.html
+++ b/content/2016-12.html
@@ -3,11 +3,12 @@ start: 2016-12-22 17:45
 edition: 38
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/236279185/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxtebOBc6b1YtTH7KRibANz'>YouTube</a>."
 agenda:
   -
     time: "6:00"
     title: "Node.js and EventLoop"
+    video_link: "https://www.youtube.com/watch?v=JoAo_cet3x8"
     speakers:
       -
         name: "Mithun Sasidharan"
@@ -16,7 +17,8 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "Atomic CSS"
+    title: "Atomic Design"
+    video_link: "https://www.youtube.com/watch?v=e4l6D5JoXZM"
     speakers:
       -
         name: "Jaani Francis Nickolas"
@@ -24,6 +26,7 @@ agenda:
   -
     time: "7:30"
     title: "Angular 2"
+    video_link: "https://www.youtube.com/watch?v=wnx_OW3KqO8"
     speakers:
       -
         name: "Dinesh Balasubramaniam"
