Adding streaming urls for jan 2017

--- a/content/2017-01.html
+++ b/content/2017-01.html
@@ -8,6 +8,7 @@ agenda:
   -
     time: "6:00"
     title: "Community Building around Digital Rights"
+    video_link: "https://www.youtube.com/watch?v=653NRdE49ug"
     speakers:
       -
         name: "Prasanth"
@@ -17,12 +18,14 @@ agenda:
   -
     time: "7:00"
     title: "React Native + Firebase"
+    video_link: "https://www.youtube.com/watch?v=CqS__8N3QrI"
     speakers:
       -
         name: "Varun Raj"
   -
     time: "7:45"
     title: "Redux"
+    video_link: "https://www.youtube.com/watch?v=8Jlxee5nvaQ"
     speakers:
       -
         name: "Arvind Thangamani"
