--- a/content/2017-01.html
+++ b/content/2017-01.html
@@ -3,7 +3,7 @@ start: 2017-01-19 17:45
 edition: 39
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/236938255/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqzks8_H12OIt0_oieNu-dft'>YouTube</a>."
 agenda:
   -
     time: "6:00"
